--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
                 coupon.web.app.services;
                 coupon.web.app.filters;
                 coupon.web.app.exceptions;
+                com.couponsystem
             </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
